<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_students"
        android:icon="@drawable/ic_students"
        android:title="@string/nav_students" />
    <item
        android:id="@+id/nav_subjects"
        android:icon="@drawable/ic_school"
        android:title="@string/nav_subjects" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_more" />
</menu>
